--- a/edc-controlplane/edc-controlplane-construct-x/local/docker-compose.yaml
+++ b/edc-controlplane/edc-controlplane-construct-x/local/docker-compose.yaml
@@ -1,8 +1,28 @@
+#
+# Copyright (c) 2026 Fraunhofer-Gesellschaft zur Foerderung der angewandten Forschung e.V. (represented by Fraunhofer ISST)
+# Copyright (c) 2026 Contributors to the Eclipse Foundation
+#
+# See the NOTICE file(s) distributed with this work for additional
+# information regarding copyright ownership.
+#
+# This program and the accompanying materials are made available under the
+# terms of the Apache License, Version 2.0 which is available at
+# https://www.apache.org/licenses/LICENSE-2.0.
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+# License for the specific language governing permissions and limitations
+# under the License.
+#
+# SPDX-License-Identifier: Apache-2.0
+#
+
 services:
   local-issuer-service:
     container_name: local-issuer-service
     image: issuerservice-dev:latest
-    pull_policy: missing
+    pull_policy: never
     depends_on:
       shared-postgres:
         condition: service_healthy
@@ -45,6 +65,7 @@ services:
   shared-postgres:
     container_name: shared-postgres
     image: postgres:16.4-alpine
+    pull_policy: if_not_present
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=password
@@ -61,11 +82,12 @@ services:
   shared-vault:
     container_name: shared-vault
     image: vault:1.13.3
+    pull_policy: if_not_present
     command: server -dev -dev-root-token-id=vaultsecret0123456789 -dev-listen-address=0.0.0.0:8200
     environment:
       VAULT_ADDR: http://0.0.0.0:8200
-      SKIP_SETCAP: true
-      SKIP_CHOWN: true
+      SKIP_SETCAP: "true"
+      SKIP_CHOWN: "true"
     healthcheck:
       test: ["CMD", "sh", "-c", "VAULT_ADDR=http://127.0.0.1:8200 vault status >/dev/null 2>&1"]
       interval: 4s
@@ -79,6 +101,7 @@ services:
   vault-init:
     container_name: vault-init
     image: alpine:3.19
+    pull_policy: if_not_present
     depends_on:
       shared-vault:
         condition: service_healthy
@@ -95,7 +118,7 @@ services:
   consumer-idhub:
     container_name: consumer-idhub
     image: identityhub-dev:latest
-    pull_policy: missing
+    pull_policy: never
     depends_on:
       shared-postgres:
         condition: service_healthy
@@ -131,7 +154,7 @@ services:
   provider-idhub:
     container_name: provider-idhub
     image: identityhub-dev:latest
-    pull_policy: missing
+    pull_policy: never
     depends_on:
       shared-postgres:
         condition: service_healthy
@@ -167,7 +190,7 @@ services:
   consumer-controlplane:
     container_name: consumer-controlplane
     image: con-x-controlplane-postgresql-hashicorp-vault:latest
-    pull_policy: missing
+    pull_policy: never
     environment:
       - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=0.0.0.0:5005
       - tx.edc.postgresql.migration.asset.enabled=false
@@ -228,6 +251,7 @@ services:
   consumer-dataplane:
     container_name: consumer-dataplane
     image: con-x-dataplane-postgresql-hashicorp-vault:latest
+    pull_policy: never
     environment:
       - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=0.0.0.0:5005
       - web.http.public.port=9500
@@ -270,7 +294,7 @@ services:
   provider-controlplane:
     container_name: provider-controlplane
     image: con-x-controlplane-postgresql-hashicorp-vault:latest
-    pull_policy: missing
+    pull_policy: never
     environment:
       - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=0.0.0.0:5005
       - tx.edc.postgresql.migration.asset.enabled=false
@@ -332,6 +356,7 @@ services:
   provider-dataplane:
     container_name: provider-dataplane
     image: con-x-dataplane-postgresql-hashicorp-vault:latest
+    pull_policy: if_not_present
     environment:
       - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=0.0.0.0:5005
       - web.http.public.port=9500
